--- a/index.html
+++ b/index.html
@@ -19,55 +19,7 @@
     </head>
     <body>
         <div id="EditTask"></div>
-        <div class="modal new-task-modal">
-            <div class="modal-overlay"></div>
-            <div class="modal-content">
-                <span class="modal-close">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
-                        stroke-width="2"
-                    >
-                        <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            d="M6 18L18 6M6 6l12 12"
-                        />
-                    </svg>
-                </span>
-                <div class="modal-main">
-                    <div class="header">
-                        <h3>Add new todo</h3>
-                    </div>
-                    <div class="body">
-                        <input
-                            id="InputCategory"
-                            class="inputCategory"
-                            type="text"
-                            placeholder="Nhập category"
-                        />
-
-                        <input
-                            id="InputTitle"
-                            class="inputTitle"
-                            type="text"
-                            placeholder="Nhập title"
-                        />
-                        <textarea
-                            id="InputDescription"
-                            class="inputContent"
-                            type="text"
-                            placeholder="Nhập content"
-                        ></textarea>
-                    </div>
-                    <div class="footer">
-                        <button id="ButtonAddTask">SUBMIT</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="NewTask"></div>
 
         <main>
             <div class="grid container">
