--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 </div>
             </div>
         </main>
+        <form
+            action="
+        "
+        ></form>
         <div id="toast"></div>
         <script type="module" src="./source/js/index.js"></script>
     </body>
