--- a/login.html
+++ b/login.html
@@ -76,13 +76,13 @@
                                         <button id="ButtonLogin">Login</button>
                                     </div>
                                 </div>
-                                <div class="tab-pane">
+                                <div class="tab-pane register-form">
                                     <div class="form-group">
                                         <label for="EmailRegister"
                                             >EmailRegister</label
                                         >
                                         <input
-                                            type="EmailRegister"
+                                            type="email"
                                             id="EmailRegister"
                                             name="EmailRegister"
                                             placeholder="Enter your email"
@@ -93,7 +93,7 @@
                                             >Password</label
                                         >
                                         <input
-                                            type="PasswordRegister"
+                                            type="password"
                                             id="PasswordRegister"
                                             name="PasswordRegister"
                                             placeholder="Enter your password"
@@ -104,7 +104,7 @@
                                             >Password</label
                                         >
                                         <input
-                                            type="PasswordConfirm"
+                                            type="password"
                                             id="PasswordConfirm"
                                             name="PasswordConfirm"
                                             placeholder="Enter your password"
