--- a/login.html
+++ b/login.html
@@ -78,9 +78,7 @@
                                 </div>
                                 <div class="tab-pane register-form">
                                     <div class="form-group">
-                                        <label for="EmailRegister"
-                                            >EmailRegister</label
-                                        >
+                                        <label for="EmailRegister">Email</label>
                                         <input
                                             type="email"
                                             id="EmailRegister"
@@ -101,7 +99,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="PasswordConfirm"
-                                            >Password</label
+                                            >Confirm Password</label
                                         >
                                         <input
                                             type="password"
