--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
                                 <span id="todo-number" class="number">0</span>
                             </div>
                             <div class="line"></div>
-                            <div class="todo-list"></div>
+                            <div class="todo-list list"></div>
                         </div>
                         <div id="doing" class="l-3">
                             <div class="title-doing title-col">
@@ -46,7 +46,7 @@
                                 <span id="doing-number" class="number">0</span>
                             </div>
                             <div class="line"></div>
-                            <div class="doing-list"></div>
+                            <div class="doing-list list"></div>
                         </div>
                         <div id="done" class="l-3">
                             <div class="title-done title-col">
@@ -54,7 +54,7 @@
                                 <span id="done-number" class="number">0</span>
                             </div>
                             <div class="line"></div>
-                            <div class="done-list"></div>
+                            <div class="done-list list"></div>
                         </div>
                         <div id="block" class="l-3">
                             <div class="title-block title-col">
@@ -62,7 +62,7 @@
                                 <span id="block-number" class="number">0</span>
                             </div>
                             <div class="line"></div>
-                            <div class="block-list"></div>
+                            <div class="block-list list"></div>
                         </div>
                     </div>
                 </div>
