--- a/main.html
+++ b/main.html
@@ -26,13 +26,17 @@
                 <div class="header">
                     <img src="./source/img/Frame 101373.png" alt="" />
                     <div class="row">
-                        <button id="ButtonNewTask">+ NEW TASK</button>
-                        <button id="ButtonLogout">- LOGOUT</button>
+                        <button id="ButtonNewTask" style="margin-left: 12px">
+                            + NEW TASK
+                        </button>
+                        <button id="ButtonLogout" style="margin-right: 12px">
+                            - LOGOUT
+                        </button>
                     </div>
                 </div>
                 <div class="body">
                     <div class="row">
-                        <div id="todo" class="l-3">
+                        <div id="todo" class="l-3 m-6 c-12">
                             <div class="title-todo title-col">
                                 <span>TODO</span>
                                 <span id="todo-number" class="number">0</span>
@@ -40,7 +44,7 @@
                             <div class="line"></div>
                             <div class="todo-list list"></div>
                         </div>
-                        <div id="doing" class="l-3">
+                        <div id="doing" class="l-3 m-6 c-12">
                             <div class="title-doing title-col">
                                 <span>DOING</span>
                                 <span id="doing-number" class="number">0</span>
@@ -48,7 +52,7 @@
                             <div class="line"></div>
                             <div class="doing-list list"></div>
                         </div>
-                        <div id="done" class="l-3">
+                        <div id="done" class="l-3 m-6 c-12">
                             <div class="title-done title-col">
                                 <span>DONE</span>
                                 <span id="done-number" class="number">0</span>
@@ -56,7 +60,7 @@
                             <div class="line"></div>
                             <div class="done-list list"></div>
                         </div>
-                        <div id="block" class="l-3">
+                        <div id="block" class="l-3 m-6 c-12">
                             <div class="title-block title-col">
                                 <span>BLOCK</span>
                                 <span id="block-number" class="number">0</span>
@@ -68,10 +72,7 @@
                 </div>
             </div>
         </main>
-        <form
-            action="
-        "
-        ></form>
+
         <div id="toast"></div>
         <script type="module" src="./source/js/index.js"></script>
     </body>
