--- a/login.html
+++ b/login.html
@@ -31,87 +31,95 @@
             <img src="./source/img/Group 101395.png" class="img-2" alt="" />
             <div class="form">
                 <div class="row">
-                    <div class="form-left l-6">
+                    <div class="form-left l-6 m-0 c-0">
                         <img src="./source/img/Mask group.png" alt="" />
                     </div>
 
-                    <div class="form-right l-6">
-                        <div class="content">
-                            <div class="tabs">
-                                <div class="tab-item l-6">Login</div>
-                                <div class="tab-item l-6">Register</div>
-                                <div class="line l-6"></div>
-                            </div>
-                            <div class="tab-content">
-                                <div class="tab-pane login-form active">
-                                    <div class="form-group">
-                                        <label for="email">Email</label>
-                                        <input
-                                            type="email"
-                                            id="email"
-                                            name="email"
-                                            placeholder="Enter your email"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="password">Password</label>
-                                        <input
-                                            type="password"
-                                            id="password"
-                                            name="password"
-                                            placeholder="Enter your password"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <input
-                                            type="checkbox"
-                                            id="remember"
-                                            name="remember"
-                                        />
-                                        <label for="remember"
-                                            >Remember your password</label
-                                        >
-                                    </div>
-                                    <div class="form-group">
-                                        <button id="ButtonLogin">Login</button>
-                                    </div>
+                    <div class="form-right l-6 m-12 c-12">
+                        <div class="row">
+                            <div class="content">
+                                <div class="tabs">
+                                    <div class="tab-item l-6">Login</div>
+                                    <div class="tab-item l-6">Register</div>
+                                    <div class="line l-6"></div>
                                 </div>
-                                <div class="tab-pane register-form">
-                                    <div class="form-group">
-                                        <label for="EmailRegister">Email</label>
-                                        <input
-                                            type="email"
-                                            id="EmailRegister"
-                                            name="EmailRegister"
-                                            placeholder="Enter your email"
-                                        />
+                                <div class="tab-content">
+                                    <div class="tab-pane login-form active">
+                                        <div class="form-group">
+                                            <label for="email">Email</label>
+                                            <input
+                                                type="email"
+                                                id="email"
+                                                name="email"
+                                                placeholder="Enter your email"
+                                            />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="password"
+                                                >Password</label
+                                            >
+                                            <input
+                                                type="password"
+                                                id="password"
+                                                name="password"
+                                                placeholder="Enter your password"
+                                            />
+                                        </div>
+                                        <div class="form-group">
+                                            <input
+                                                type="checkbox"
+                                                id="remember"
+                                                name="remember"
+                                            />
+                                            <label for="remember"
+                                                >Remember your password</label
+                                            >
+                                        </div>
+                                        <div class="form-group">
+                                            <button id="ButtonLogin">
+                                                Login
+                                            </button>
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="PasswordRegister"
-                                            >Password</label
-                                        >
-                                        <input
-                                            type="password"
-                                            id="PasswordRegister"
-                                            name="PasswordRegister"
-                                            placeholder="Enter your password"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="PasswordConfirm"
-                                            >Confirm Password</label
-                                        >
-                                        <input
-                                            type="password"
-                                            id="PasswordConfirm"
-                                            name="PasswordConfirm"
-                                            placeholder="Enter your password"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <button id="ButtonRegister">
-                                            Register
-                                        </button>
+                                    <div class="tab-pane register-form">
+                                        <div class="form-group">
+                                            <label for="EmailRegister"
+                                                >Email</label
+                                            >
+                                            <input
+                                                type="email"
+                                                id="EmailRegister"
+                                                name="EmailRegister"
+                                                placeholder="Enter your email"
+                                            />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="PasswordRegister"
+                                                >Password</label
+                                            >
+                                            <input
+                                                type="password"
+                                                id="PasswordRegister"
+                                                name="PasswordRegister"
+                                                placeholder="Enter your password"
+                                            />
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="PasswordConfirm"
+                                                >Confirm Password</label
+                                            >
+                                            <input
+                                                type="password"
+                                                id="PasswordConfirm"
+                                                name="PasswordConfirm"
+                                                placeholder="Enter your password"
+                                            />
+                                        </div>
+                                        <div class="form-group">
+                                            <button id="ButtonRegister">
+                                                Register
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
